# escapement

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
escapement/: __init__.py  cli.py  config.py  core.py  interceptor.py  storage.py  tracer.py
escapement/integrations/: __init__.py  langchain.py
examples/: basic_recording.py  loop_detection.py  replay_trace.py  time_travel.py
