[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escapement"
version = "0.1.0"
description = "Deterministic replay engine for AI agents - debug Heisenbugs with time-travel debugging"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Escapement Team" }
]
keywords = ["ai", "agents", "debugging", "replay", "llm", "langchain", "openai", "anthropic", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
dev = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
escapement = "escapement.cli:main"

[project.urls]
Homepage = "https://github.com/escapement/escapement"
Documentation = "https://escapement.dev/docs"
Repository = "https://github.com/escapement/escapement"

[tool.hatch.build.targets.wheel]
packages = ["escapement"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
